add missing dependency to catalog-info

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -13,6 +13,7 @@ spec:
   providesApis:
     - notification-service-api
   dependsOn:
+    - api:user-service-api
     - resource:notification-service-db
     - resource:kafka
 ---
