--- a/kustomize/prod/deployment.yaml
+++ b/kustomize/prod/deployment.yaml
@@ -70,7 +70,13 @@ spec:
                 secretKeyRef:
                   name: kafka
                   key: sasl_password
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: user-service
+                  key: jwt_key
       imagePullSecrets:
         - name: dockerconfigjson-github-com
         - name: postgres-notification
         - name: kafka
+        - name: user-service
