--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -7,6 +7,13 @@ service:
     enabled: true
     paths:
       - /notification
+  resources:
+    requests:
+      memory: 1000Mi
+      cpu: 500m
+    limits:
+      memory: 1250Mi
+      cpu: 750m
   env:
     KAFKA_BOOTSTRAP_SERVERS: thirdplace-kafka-kafka-brokers.kafka.svc.cluster.local
     KAFKA_SECURITY_PROTOCOL:
