should be `dockerfile`, not `file`

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -12,7 +12,7 @@ jobs:
     with:
       name: notification-service
       directory: .
-      file: Dockerfile.service
+      dockerfile: Dockerfile.service
   publish-consumer-image:
     needs: run-tests
     uses: third-place/actions/.github/workflows/publish-docker-image.yaml@main
