--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -14,6 +14,8 @@ service:
     limits:
       memory: 512Mi
       cpu: 500m
+  consumer:
+    enabled: true
   env:
     KAFKA_BOOTSTRAP_SERVERS: thirdplace-kafka-kafka-brokers.kafka.svc.cluster.local
     KAFKA_SECURITY_PROTOCOL:
